Fix btn spacing

--- a/public/application.css
+++ b/public/application.css
@@ -102,7 +102,7 @@ form#stay {
 #spacer {
   margin-top: 350; 
   margin-left: 80;
-  width: 350px;
+  width: 370px;
   height: 70px;
 }
 
